--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "lib/index.js",
   "dependencies": {
     "debug": "^2.2.0",
+    "limiter": "^1.1.0",
     "lru-memoizer": "^1.6.0",
     "ms": "^0.7.1",
     "request": "^2.73.0"
