--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jwks-rsa",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Library to retrieve RSA public keys from a JWKS endpoint",
   "main": "lib/index.js",
   "dependencies": {
@@ -19,6 +19,8 @@
     "chai": "^3.5.0",
     "eslint": "^2.10.2",
     "eslint-plugin-babel": "^3.2.0",
+    "express-jwt": "^3.4.0",
+    "jsonwebtoken": "^7.1.7",
     "mocha": "^2.5.3",
     "nock": "^8.0.0",
     "rimraf": "^2.5.2"
