--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "eslint-plugin-babel": "^3.2.0",
     "express-jwt": "^3.4.0",
     "jsonwebtoken": "^7.1.7",
+    "koa": "^2.2.0",
+    "koa-jwt": "^3.2.0",
     "mocha": "^2.5.3",
     "nock": "^8.0.0",
-    "rimraf": "^2.5.2"
+    "rimraf": "^2.5.2",
+    "supertest": "^3.0.0"
   },
   "scripts": {
     "clean": "rimraf lib/",
