--- a/examples/passport-demo/package.json
+++ b/examples/passport-demo/package.json
@@ -1,7 +1,7 @@
 {
   "name": "passport-demo",
   "version": "1.0.0",
-  "description": "Sample that shows how tu use jwks-rsa with Passport",
+  "description": "Sample that shows how to use jwks-rsa with Passport.js",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
