--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "eslint": "^2.10.2",
     "eslint-plugin-babel": "^3.2.0",
     "express-jwt": "^3.4.0",
+    "fastify": "^1.5.0",
+    "fastify-jwt": "^0.3.0",
     "jsonwebtoken": "^7.1.7",
     "koa": "^2.2.0",
     "koa-jwt": "^3.2.0",
