--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "jwks-rsa",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Library to retrieve RSA public keys from a JWKS endpoint",
   "main": "lib/index.js",
   "types": "index.d.ts",
   "dependencies": {
-    "@types/express-jwt": "0.0.40",
-    "debug": "^3.1.0",
-    "limiter": "^1.1.3",
-    "lru-memoizer": "^1.12.0",
-    "ms": "^2.1.1",
-    "request": "^2.87.0"
+    "@types/express-jwt": "0.0.34",
+    "debug": "^2.2.0",
+    "limiter": "^1.1.0",
+    "lru-memoizer": "^1.6.0",
+    "ms": "^2.0.0",
+    "request": "^2.73.0"
   },
   "devDependencies": {
     "babel-cli": "^6.9.0",
@@ -22,12 +22,12 @@
     "eslint": "^2.10.2",
     "eslint-plugin-babel": "^3.2.0",
     "express": "^4.16.2",
-    "express-jwt": "^5.3.1",
+    "express-jwt": "^3.4.0",
     "jsonwebtoken": "^8.3.0",
     "koa": "^2.2.0",
     "koa-jwt": "^3.2.0",
     "mocha": "^2.5.3",
-    "nock": "^9.4.1",
+    "nock": "^8.0.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "rimraf": "^2.5.2",
@@ -39,7 +39,7 @@
     "prepublish": "npm run clean && npm run compile",
     "test": "NODE_ENV=test mocha --compilers js:babel-core/register --timeout 5000 $(find ./tests -name *.tests.js)",
     "test-watch": "NODE_ENV=test mocha --compilers js:babel-core/register --timeout 5000 $(find ./tests -name *.tests.js) --watch",
-    "release": "git tag $npm_package_version && git push && git push --tags && npm publish --access public"
+    "release": "git tag $npm_package_version && git push && git push --tags && npm publish"
   },
   "repository": {
     "type": "git",
