add file-cache option

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "koa": "^2.11.0",
     "koa-jwt": "^3.6.0",
     "mocha": "^6.2.2",
+    "mock-fs": "^4.10.4",
     "nock": "^10.0.6",
     "nyc": "^15.0.0",
     "passport": "^0.4.0",
