--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@types/nock": "^10.0.3",
     "babel-cli": "^6.9.0",
     "babel-core": "^6.9.0",
-    "babel-eslint": "^6.0.4",
+    "babel-eslint": "^8.2.6",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
@@ -43,6 +43,7 @@
     "clean": "rimraf lib/",
     "clean:ts": "rimraf ts-output/",
     "compile": "babel -d lib/ src/",
+    "lint": "eslint ./src ./tests",
     "prepublish": "npm run clean && npm run compile",
     "test:ts": "npm run clean:ts && tsc && NODE_ENV=test mocha --require babel-core/register --exit --timeout 5000 $(find ./ts-output -name *.tests.js)",
     "test:js": "NODE_ENV=test mocha --require babel-core/register --exit --timeout 5000 $(find ./tests -name *.tests.js)",
