--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,12 @@
 {
   "parser": "babel-eslint",
-  "ecmaFeatures": {
-    "arrowFunctions": true,
-    "blockBindings": true,
-    "generators": true,
-    "modules": true
+  "parserOptions": {
+    "ecmaFeatures": {
+      "arrowFunctions": true,
+      "blockBindings": true,
+      "generators": true,
+      "modules": true
+    }
   },
   "rules": {
     "array-bracket-spacing": [2, "always"],
