feat: no-extra-semi rule

--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,7 @@
     "no-multiple-empty-lines": 2,
     "no-unused-vars": 2,
     "no-var": 2,
+    "no-extra-semi": 2,
     "object-curly-spacing": [2, "always"],
     "quotes": [2, "single", "avoid-escape"],
     "semi": [2, "always"],
