--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "eslint-plugin-babel": "^5.3.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
+    "http-proxy-agent": "^4.0.1",
+    "https-proxy-agent": "^5.0.0",
     "koa": "^2.12.1",
     "koa-jwt": "^3.6.0",
     "mocha": "^6.2.3",
@@ -34,6 +36,7 @@
     "nyc": "^15.1.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "proxy": "^1.0.2",
     "rimraf": "^2.7.1",
     "supertest": "^3.4.2",
     "ts-node": "^8.10.2",
