--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "jsonwebtoken": "^8.5.1",
     "limiter": "^1.1.5",
     "lru-memoizer": "^2.1.2",
-    "ms": "^2.1.2"
+    "ms": "^2.1.2",
+    "http-proxy-agent": "^4.0.1",
+    "https-proxy-agent": "^5.0.0"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
@@ -27,8 +29,6 @@
     "eslint-plugin-babel": "^5.3.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
-    "http-proxy-agent": "^4.0.1",
-    "https-proxy-agent": "^5.0.0",
     "koa": "^2.12.1",
     "koa-jwt": "^3.6.0",
     "mocha": "^6.2.3",
