--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "index.d.ts",
   "dependencies": {
     "@types/express-jwt": "0.0.42",
-    "axios": "^0.19.2",
+    "axios": "^0.20.0",
     "debug": "^4.1.0",
     "http-proxy-agent": "^4.0.1",
     "https-proxy-agent": "^5.0.0",
@@ -20,6 +20,7 @@
     "@types/chai": "^4.2.11",
     "@types/mocha": "^5.2.7",
     "@types/nock": "^10.0.3",
+    "@types/node": "^14.14.12",
     "babel-cli": "^6.9.0",
     "babel-core": "^6.9.0",
     "babel-eslint": "^8.2.6",
