Pinning Node Engine Versions
- pinning current LTS node versions https://nodejs.org/en/about/releases/
- adding LTS versions to CircleCI
- fixing tests on node 14

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,13 @@
 version: 2
+workflows:
+  matrix-tests:
+    jobs:
+      - node/test:
+          version: 14.15.4
+      - node/test:
+          version: 12.20.1
+      - node/test:
+          version: 10.13.0
 jobs:
   build:
     docker:
