--- a/package.json
+++ b/package.json
@@ -9,24 +9,20 @@
   },
   "dependencies": {
     "@types/express-jwt": "0.0.42",
-    "axios": "^0.21.1",
     "debug": "^4.1.0",
-    "http-proxy-agent": "^4.0.1",
-    "https-proxy-agent": "^5.0.0",
     "jose": "^2.0.2",
     "limiter": "^1.1.5",
-    "lru-memoizer": "^2.1.2",
-    "ms": "^2.1.2",
-    "proxy-from-env": "^1.1.0"
+    "lru-memoizer": "^2.1.2"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
     "@types/mocha": "^5.2.7",
-    "@types/nock": "^10.0.3",
+    "@types/nock": "^11.0.0",
     "@types/node": "^14.14.12",
     "babel-cli": "^6.9.0",
     "babel-core": "^6.9.0",
     "babel-eslint": "^8.2.6",
+    "babel-polyfill": "^6.24.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
@@ -38,11 +34,10 @@
     "koa": "^2.12.1",
     "koa-jwt": "^3.6.0",
     "mocha": "^6.2.3",
-    "nock": "^10.0.6",
+    "nock": "^13.0.0",
     "nyc": "^15.1.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "proxy": "^1.0.2",
     "rimraf": "^2.7.1",
     "supertest": "^3.4.2",
     "ts-node": "^8.10.2",
@@ -54,11 +49,11 @@
     "compile": "babel -d lib/ src/",
     "lint": "eslint ./src ./tests",
     "prepublish": "npm run clean && npm run compile",
-    "test:ts": "npm run clean:ts && tsc && NODE_ENV=test mocha --require babel-core/register --exit --timeout 5000 $(find ./ts-output -name *.tests.js)",
-    "test:js": "NODE_ENV=test mocha --require babel-core/register --exit --timeout 5000 $(find ./tests -name *.tests.js)",
+    "test:ts": "npm run clean:ts && tsc && NODE_ENV=test mocha --require babel-core/register --require babel-polyfill --exit --timeout 5000 $(find ./ts-output -name *.tests.js)",
+    "test:js": "NODE_ENV=test mocha --require babel-core/register --require babel-polyfill --exit --timeout 5000 $(find ./tests -name *.tests.js)",
     "test": "npm run test:js && npm run test:ts",
     "test:ci": "nyc --reporter=lcov npm test",
-    "test-watch": "NODE_ENV=test mocha --require babel-core/register --exit --timeout 5000 $(find ./tests -name *.tests.js) --watch",
+    "test-watch": "NODE_ENV=test mocha --require babel-core/register --require babel-polyfill --exit --timeout 5000 $(find ./tests -name *.tests.js) --watch",
     "release": "git tag $npm_package_version && git push && git push --tags && npm publish"
   },
   "repository": {
