--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "jwks-rsa",
   "version": "2.0.0",
   "description": "Library to retrieve RSA public keys from a JWKS endpoint",
-  "main": "lib/index.js",
+  "main": "src/index.js",
+  "files": [
+    "src",
+    "index.d.ts"
+  ],
   "types": "index.d.ts",
   "engines": {
     "node": ">=10 < 13 || >=14"
@@ -19,15 +23,8 @@
     "@types/mocha": "^5.2.7",
     "@types/nock": "^11.0.0",
     "@types/node": "^14.14.12",
-    "babel-cli": "^6.9.0",
-    "babel-core": "^6.9.0",
-    "babel-eslint": "^8.2.6",
-    "babel-polyfill": "^6.24.1",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
     "eslint": "^5.16.0",
-    "eslint-plugin-babel": "^5.3.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
@@ -44,16 +41,13 @@
     "typescript": "^3.9.5"
   },
   "scripts": {
-    "clean": "rimraf lib/",
     "clean:ts": "rimraf ts-output/",
-    "compile": "babel -d lib/ src/",
     "lint": "eslint ./src ./tests",
-    "prepublish": "npm run clean && npm run compile",
-    "test:ts": "npm run clean:ts && tsc && NODE_ENV=test mocha --require babel-core/register --require babel-polyfill --exit --timeout 5000 $(find ./ts-output -name *.tests.js)",
-    "test:js": "NODE_ENV=test mocha --require babel-core/register --require babel-polyfill --exit --timeout 5000 $(find ./tests -name *.tests.js)",
+    "test:ts": "npm run clean:ts && tsc && NODE_ENV=test mocha --exit --timeout 5000 $(find ./ts-output -name *.tests.js)",
+    "test:js": "NODE_ENV=test mocha --exit --timeout 5000 $(find ./tests -name *.tests.js)",
     "test": "npm run test:js && npm run test:ts",
     "test:ci": "nyc --reporter=lcov npm test",
-    "test-watch": "NODE_ENV=test mocha --require babel-core/register --require babel-polyfill --exit --timeout 5000 $(find ./tests -name *.tests.js) --watch",
+    "test-watch": "NODE_ENV=test mocha --exit --timeout 5000 $(find ./tests -name *.tests.js) --watch",
     "release": "git tag $npm_package_version && git push && git push --tags && npm publish"
   },
   "repository": {
