Update .eslintrc and fix linting errors

--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,9 @@
     "space-before-blocks": [2, "always"]
   },
   "env": {
-    "node": true
-  }
+    "node": true,
+    "mocha": true,
+    "es6": true
+  },
+  "extends": "eslint:recommended"
 }
