--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^5.16.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
+    "express-jwt-v7": "npm:express-jwt@^7.5.0",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.12.1",
     "koa-jwt": "^3.6.0",
