--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "node": ">=10 < 13 || >=14"
   },
   "dependencies": {
-    "@types/express-jwt": "0.0.42",
+    "@types/express": "^4.17.13",
     "debug": "^4.3.4",
     "jose": "^2.0.5",
     "limiter": "^1.1.5",
@@ -20,6 +20,8 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
+    "@types/express-jwt": "^6.0.4",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/mocha": "^5.2.7",
     "@types/nock": "^11.0.0",
     "@types/node": "^14.14.12",
