--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
     "debug": "^4.3.4",
-    "jose": "^2.0.6",
+    "jose": "^4.10.3",
     "limiter": "^1.1.5",
     "lru-memoizer": "^2.1.4"
   },
@@ -32,6 +32,7 @@
     "express-jwt": "^6.0.0",
     "express-jwt-v7": "npm:express-jwt@^7.5.0",
     "jsonwebtoken": "^8.5.1",
+    "jose2": "npm:jose@^2.0.6",
     "koa": "^2.12.1",
     "koa-jwt": "^3.6.0",
     "mocha": "^6.2.3",
