--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,4 +2,4 @@ blank_issues_enabled: false
 contact_links:
   - name: Auth0 Community
     url: https://community.auth0.com
-    about: Discuss this SDK in the Auth0 Community forums
+    about: Discuss this library in the Auth0 Community forums
