--- a/package.json
+++ b/package.json
@@ -12,38 +12,39 @@
     "node": ">=14"
   },
   "dependencies": {
-    "@types/express": "^4.17.14",
-    "@types/jsonwebtoken": "^9.0.0",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "debug": "^4.3.4",
-    "jose": "^4.10.4",
+    "jose": "^4.14.6",
     "limiter": "^1.1.5",
-    "lru-memoizer": "^2.1.4"
+    "lru-memoizer": "^2.2.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.11",
-    "@types/express-jwt": "^6.0.4",
-    "@types/mocha": "^5.2.7",
+    "@types/chai": "^4.3.6",
+    "@types/express-jwt-v6": "npm:@types/express-jwt@^6.0.4",
+    "@types/mocha": "^10.0.1",
     "@types/nock": "^11.0.0",
-    "@types/node": "^14.14.12",
-    "chai": "^3.5.0",
+    "@types/node": "^20.6.0",
+    "chai": "^4.3.8",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^5.16.0",
-    "express": "^4.17.1",
-    "express-jwt": "^6.0.0",
+    "eslint": "^8.49.0",
+    "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
+    "express-jwt-v6": "npm:express-jwt@^6.1.2",
     "express-jwt-v7": "npm:express-jwt@^7.5.0",
-    "jsonwebtoken": "^9.0.0",
     "jose2": "npm:jose@^2.0.6",
-    "koa": "^2.12.1",
-    "koa-jwt": "^3.6.0",
-    "mocha": "^10.1.0",
-    "nock": "^13.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "koa": "^2.14.2",
+    "koa-jwt": "^4.0.4",
+    "mocha": "^10.2.0",
+    "nock": "^13.3.3",
     "nyc": "^15.1.0",
     "passport": "^0.6.0",
-    "passport-jwt": "^4.0.0",
-    "rimraf": "^2.7.1",
-    "supertest": "^3.4.2",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.5"
+    "passport-jwt": "^4.0.1",
+    "rimraf": "^5.0.1",
+    "supertest": "^6.3.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   },
   "scripts": {
     "clean:ts": "rimraf ts-output/",
