--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "jwks-rsa",
   "version": "3.1.0",
   "description": "Library to retrieve RSA public keys from a JWKS endpoint",
+  "type": "module",
   "main": "src/index.js",
   "files": [
     "src",
@@ -12,35 +13,40 @@
     "node": ">=14"
   },
   "dependencies": {
-    "@types/express": "^4.17.17",
-    "@types/jsonwebtoken": "^9.0.2",
     "debug": "^4.3.4",
     "jose": "^4.14.6",
     "limiter": "^1.1.5",
     "lru-memoizer": "^2.2.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/express": "^4.17.17",
+    "@types/chai-as-promised": "^7.1.6",
     "@types/chai": "^4.3.6",
+    "@types/debug": "^4.1.9",
     "@types/express-jwt-v6": "npm:@types/express-jwt@^6.0.4",
     "@types/mocha": "^10.0.1",
     "@types/nock": "^11.0.0",
     "@types/node": "^20.6.0",
-    "chai": "^4.3.8",
+    "@types/passport-jwt": "^3.0.10",
+    "@types/passport": "^1.0.13",
+    "@types/supertest": "^2.0.14",
     "chai-as-promised": "^7.1.1",
+    "chai": "^4.3.8",
     "eslint": "^8.49.0",
-    "express": "^4.18.2",
-    "express-jwt": "^8.4.1",
     "express-jwt-v6": "npm:express-jwt@^6.1.2",
     "express-jwt-v7": "npm:express-jwt@^7.5.0",
+    "express-jwt": "^8.4.1",
+    "express": "^4.18.2",
     "jose2": "npm:jose@^2.0.6",
     "jsonwebtoken": "^9.0.2",
-    "koa": "^2.14.2",
     "koa-jwt": "^4.0.4",
+    "koa": "^2.14.2",
     "mocha": "^10.2.0",
     "nock": "^13.3.3",
     "nyc": "^15.1.0",
-    "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
+    "passport": "^0.6.0",
     "rimraf": "^5.0.1",
     "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
