--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -12,5 +12,6 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "strictNullChecks": true,
-  }
+  },
+  "exclude": ["node_modules", "dist"]
 }
