Add source and build typechecking in CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 orbs:
   ship: auth0/ship@0.3.0
   codecov: codecov/codecov@3
-  
+
 jobs:
   build:
     parameters:
@@ -15,22 +15,30 @@ jobs:
       LANG: en_US.UTF-8
     steps:
       - checkout
-      
+
       - ship/node-install-packages
-      
+
       - run:
           name: Run Linter
           command: npm run lint
-          
+
       - run:
           name: Run Tests
           command: npm run test:ci
-          
+
+      - run:
+          name: Check source typings
+          command: npm run types:check
+
+      - run:
+          name: Check built typings
+          command: npm run build:check
+
       - store_artifacts:
           path: ./coverage/<< parameters.node-version >>/lcov-report
-          
+
       - codecov/upload
-      
+
 workflows:
   build-and-test:
     jobs:
