--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "debug": "^4.3.4",
     "jose": "^4.15.4",
     "limiter": "^1.1.5",
-    "lru-memoizer": "^2.2.0"
+    "lru-memoizer": "^2.2.0",
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
     "@types/chai": "^4.3.9",
