--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   ],
   "types": "index.d.ts",
   "engines": {
-    "node": ">=14"
+    "node": "^20.19.0 || ^22.12.0 || >= 23.0.0"
   },
   "dependencies": {
     "@types/express": "^4.17.20",
     "@types/jsonwebtoken": "^9.0.4",
     "debug": "^4.3.4",
-    "jose": "^4.15.4",
+    "jose": "^6.1.0",
     "limiter": "^1.1.5",
     "lru-memoizer": "^2.2.0"
   },
@@ -23,8 +23,7 @@
     "@types/chai": "^4.3.9",
     "@types/express-jwt-v6": "npm:@types/express-jwt@^6.0.4",
     "@types/mocha": "^10.0.3",
-    "@types/nock": "^11.0.0",
-    "@types/node": "^20.8.10",
+    "@types/node": "^20.19.17",
     "chai": "^4.3.10",
     "chai-as-promised": "^7.1.1",
     "eslint": "^8.52.0",
