Refactor to ESM

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,15 @@
 {
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": 2018
+    "ecmaVersion": 2020,
+    "sourceType": "module",
+    "project": "./tsconfig.json"
   },
+  "plugins": ["@typescript-eslint"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
   "rules": {
     "array-bracket-spacing": [2, "always"],
     "comma-dangle": [2, "never"],
@@ -11,7 +19,15 @@
     }],
     "jsx-quotes": [2, "prefer-double"],
     "no-multiple-empty-lines": 2,
-    "no-unused-vars": 2,
+    // Disable base no-unused-vars, use TS version
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      { "argsIgnorePattern": "^_", "varsIgnorePattern": "^_", "caughtErrorsIgnorePattern": "^_" }
+    ],
+    // Allow bare expressions (needed for chai.expect)
+    "no-unused-expressions": "off",
+    "@typescript-eslint/no-unused-expressions": "off",
     "no-var": 2,
     "no-extra-semi": 2,
     "object-curly-spacing": [2, "always"],
@@ -23,7 +39,6 @@
   "env": {
     "node": true,
     "mocha": true,
-    "es6": true
-  },
-  "extends": "eslint:recommended"
+    "es2020": true
+  }
 }
