--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,8 +17,6 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: ${{ github.ref != 'refs/heads/master' }}
 
-env:
-  CACHE_KEY: "${{ github.ref }}-${{ github.run_id }}-${{ github.run_attempt }}"
 
 jobs:
   configure:
@@ -53,11 +51,6 @@ jobs:
         with:
           node: ${{ matrix.node }}
 
-      - name: Save build artifacts
-        uses: actions/cache/save@v4
-        with:
-          path: .
-          key: ${{ matrix.node }}-${{ env.CACHE_KEY }}
 
   unit:
     needs: [configure, build] # Require build to complete before running tests
@@ -76,11 +69,8 @@ jobs:
           node-version: ${{ matrix.node }}
           cache: npm
 
-      - uses: actions/cache/restore@v4
-        with:
-          path: .
-          key: ${{ matrix.node }}-${{ env.CACHE_KEY }}
 
+      - run: npm ci
       - run: npm run test:ci
 
       # only upload coverage on one node version
@@ -101,9 +91,6 @@ jobs:
           node-version: 18
           cache: npm
 
-      - uses: actions/cache/restore@v4
-        with:
-          path: .
-          key: 18-${{ env.CACHE_KEY }}
 
+      - run: npm ci
       - run: npm run lint
