--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,6 @@ jobs:
     uses: ./.github/workflows/npm-release.yml
     with:
       node-version: 22
-      require-build: true
+      require-build: false
     secrets:
       github-token: ${{ secrets.GITHUB_TOKEN }}
