--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "types": "index.d.ts",
   "engines": {
-    "node": ">=14"
+    "node": "^20.19.0 || ^22.12.0 || >= 23.0.0"
   },
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.4",
